ho aggiunto una poesia

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 # MartyMasche.github.io
 <html>
-<head>
-    <title>prova 
- </title>
-</head>
-<body>
-    <p>I conigli</p>
-</body>
+    <head>
+        <title>Spin-off di "Sfida: Scrivere una Poesia"</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+    <h1> Ed è subito sera</h1>
+    <h2>Salvatore Quasimodo</h2>
+    <p>Ognuno sta solo sul cuor della terra <br>trafitto da un raggio di sole: <br>ed è subito sera.</p>
+    </body>
 </html>
