ho aggiunto i collegamenti e creato altre 2 pagine

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <h1> Ed è subito sera</h1>
     <h2>Salvatore Quasimodo</h2>
     <p>Ognuno sta solo sul cuor della terra <br>trafitto da un raggio di sole: <br>ed è subito sera.</p>
-    </body>
+    <a href="html2"></a>  
+    <a href="html3"></a>  
+</body>
 </html>
