ho aggiunto una nuova pagina

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Ognuno sta solo sul cuor della terra <br>trafitto da un raggio di sole: <br>ed è subito sera.</p>
     <a href="html2"></a>  
     <a href="html3"></a>  
+    <a href="html4"></a>
 </body>
 </html>
